[package]
name = "ljud"
version = "0.0.3"
edition = "2021"
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]
readme = "README.md"
license-file = "LICENSE"
description = "Graph-based music DSP library with a focus on flexibility."
repository = "https://github.com/chaosprint/ljud.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

[[bench]]
name = "fm"
harness = false

[dev-dependencies]
cpal = "0.15.2"
criterion = "0.4.0"
anyhow = "1.0.70"

[dependencies]
smallvec = { version = "1.10.0" }
hashbrown = { version = "0.13.2" }
hound = { version = "3.5.0", optional = true }
libm = { version = "0.2.5", optional = true }
# gnuplot = "*"

[features]
default = ["sampler"]
sampler = ["hound"]
no_std = ["libm"]